<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/margin_15"
    android:background="@android:color/transparent"
    android:padding="@dimen/margin_10"
    app:cardCornerRadius="15dp"

    >

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/margin_10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:weightSum="1">

            <LinearLayout
                android:id="@+id/profile_camera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="2dp"
                    android:visibility="gone"
                    android:background="@drawable/ic_icon_camera" />

                <TextView
                    android:id="@+id/image_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/image"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"

                    tools:ignore="MissingConstraints" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/profile_gallery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="8dp"
                    android:visibility="gone"
                    android:background="@drawable/ic_icons_pic" />

                <TextView
                    android:id="@+id/video_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/video"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

            </LinearLayout>

        </LinearLayout>


        <TextView
            android:id="@+id/view2"
            android:layout_width="350dp"
            android:layout_height="1dp"
            android:visibility="invisible"
            android:background="@android:color/black" />

        <TextView
            android:id="@+id/profile_cancel"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/colorPrimary"
            android:visibility="invisible"
            android:textSize="22sp" />

    </LinearLayout>
</androidx.cardview.widget.CardView>